--- a/style.css
+++ b/style.css
@@ -1,1 +1,11 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body{
+    background-color: rgba(9, 1, 32, 0.6);
+    font-family: Arial, Helvetica, sans-serif;
+}
 
